Fix background being squished on homepage (#422)
Fix background being squished on homepage

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -119,24 +119,23 @@ $sidebar-width: 7.8rem;
   }
 }
 .off-canvas-wrap {
-  @media only screen and (min-width: 71.063em) and (max-width: 120em){
-    margin-left: 4rem;
-    width: 92%;
-    &.home-page{
+  &:not(.home-page) {
+    @media only screen and (min-width: 71.063em) and (max-width: 120em){
+      margin-left: 4rem;
+      width: 92%;
+    }
+    @media only screen and (max-width: 71em) and (min-width: 64.0625em){
+      margin-left: 2.5rem;
+      width: 96%;
+    }
+    @media #{$medium-only}{
+      margin-left: 2rem;
+      width: 94.8%;
+    }
+    @media #{$small-only}{
+      margin-left: 0rem;
       width: 100%;
     }
-  }
-  @media only screen and (max-width: 71em) and (min-width: 64.0625em){
-    margin-left: 2.5rem;
-    width: 96%;
-  }
-  @media #{$medium-only}{
-    margin-left: 2rem;
-    width: 94.8%;
-  }
-  @media #{$small-only}{
-    margin-left: 0rem;
-    width: 100%;
   }
 }
 .left-off-canvas-menu {
