--- a/app/styles/templates/_home.scss
+++ b/app/styles/templates/_home.scss
@@ -56,46 +56,28 @@
       }
     }
   }
-  #image-overlay {
-    opacity: 0.5;
+  .image-overlay {
     z-index: 1;
     position: absolute;
     left: -6%;
     top: 0;
-    background-color: #1a1d21;
     width: 150%;
     height: 100%;
+
+    &.tinted {
+      background-color: #1a1d21;
+      opacity: 0.5;
+    }
   }
 
   #image-background{
-    position: absolute;
-    bottom: 0;
-    right:0;
-    min-width: 100%;
-    min-height: 100%;
-    max-width: unset;
-    overflow: hidden;
-    z-index: -1;
-    height: 100%;
-
-    @media #{$medium-only} {
-      width: 200%;
-      left: -55%;
-    }
-
-    @media #{$large-only} {
-      width: 106%;
-    }
-
-    @media #{$xlarge-only} {
-      width: 108%;
-      left: -5%;
-    }
-
-    @media #{$xxlarge-only} {
-      width: 108%;
-    }
+    background-image: url('/assets/images/home-bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    margin-left: -15%; // Have the woman of the picture in the center
   }
+
   .intro-text{
     height: 100%;
     z-index: 2;
